--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <version>${scala.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.github.fommil.netlib</groupId>
+      <artifactId>all</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
       <version>1.6.1</version>
