--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.github.fommil.netlib</groupId>
@@ -38,11 +39,13 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
       <version>2.0.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-mllib_2.11</artifactId>
       <version>2.0.0</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Test -->
@@ -128,6 +131,20 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.6</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <mainClass>scaladl.examples.MnistClassification</mainClass>
+              </manifest>
+            </archive>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+          </configuration>
       </plugin>
     </plugins>
   </build>
