--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>scaladl</groupId>
   <artifactId>scaladl</artifactId>
-  <version>0.2-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>${project.artifactId}</name>
   <description>Scalable implementation of Deep Learning for Spark</description>
   <inceptionYear>2016</inceptionYear>
